--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,13 +4,15 @@
       <%= render 'search_form', url: products_path %>
     </div>
     <p><%= t('product.index.find_the_product') %></p><%= link_to t('product.new.title'), new_product_path, class: "link text-[#3F51B5]" %>
-    <div class="flex flex-wrap p-5 gap-5">
-      <% if @products.present? %>
-        <%= render @products %>
-      <% else %>
-        <p><%= t('product.index.without_product') %></p>
-      <% end %>
-    </div>
-    <%= render "shared/load_more_button" %>
+    <%= turbo_frame_tag "products" do %>
+      <div class="flex flex-wrap p-5 gap-5">
+        <% if @products.present? %>
+          <%= render @products %>
+        <% else %>
+          <p><%= t('product.index.without_product') %></p>
+        <% end %>
+      </div>
+      <%= render "shared/load_more_button" %>
+    <% end %>
   </div>
 <% end %>
