--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,12 +15,17 @@
         <% end %>
       </div>
     </div>
-    <div class="flex flex-wrap -m-4 justify-center items-center">
-      <% if @reviews.present? %>
-        <%= render partial: 'reviews/review', collection: @reviews %>
-      <% else %>
-        <div class="tracking-wider"><%= t('reviews.index.without_review') %></div>
-      <% end %>
-    </div>
+    <%= turbo_frame_tag "show_product_reviews" do %>
+      <div class="flex flex-col gap-4">
+        <div class="flex flex-wrap -m-4 justify-center items-center">
+          <% if @reviews.present? %>
+            <%= render partial: 'reviews/review', collection: @reviews %>
+          <% else %>
+            <div class="tracking-wider"><%= t('reviews.index.without_review') %></div>
+          <% end %>
+        </div>
+        <%= render "shared/load_more_button" %>
+      </div>
+    <% end %>
   </div>
 </section>
