--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,5 +1,4 @@
-<div class="container mx-auto w-full px-10 py-5">
-  <h1 class="text-5xl font-bold text-center mb-10"><%= t('reviews.index.title') %></h1>
+<%= turbo_frame_tag "reviews" do %>
   <div class="flex flex-wrap justify-center items-center p-5 gap-5">
     <% if @reviews.present? %>
       <%= render @reviews %>
@@ -7,4 +6,5 @@
       <div><%= t('reviews.index.without_review') %></div>
     <% end %>
   </div>
-</div>
+  <%= render "shared/load_more_button" %>
+<% end %>
