--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -12,14 +12,32 @@
     <% end %>
   </div>
   <h1 class="text-[32px] sm:text-5xl font-bold text-center mb-10 tracking-wider"><%= t('home.see_review') %></h1>
-  <%= turbo_frame_tag "reviews" do %>
+  <%= turbo_frame_tag "reviews", src: reviews_path, loading: :lazy do %>
     <div class="flex flex-wrap justify-center items-center p-5 gap-5">
-      <% if @reviews.present? %>
-        <%= render partial: 'reviews/review', collection: @reviews %>
-      <% else %>
-        <div class="tracking-wider"><%= t('reviews.index.without_review') %></div>
+      <% 10.times do %>
+        <div class="card sm:card-side m-4 shadow">
+          <div class="px-10 sm:px-4 py-4 sm:relative">
+            <div class="skeleton h-[170px] w-[170px]"></div>
+            <div class="card-actions sm:justify-end mt-1">
+              <div class="skeleton h-4 w-20"></div>
+            </div>
+          </div>
+          <div class="card-body gap-2 flex-shrink-0 w-[250px] sm:w-[340px] p-4">
+            <div class="card-title overflow-hidden mb-1 justify-between">
+              <div class="skeleton h-4 w-full"></div>
+              <div class="skeleton h-8 w-8 shrink-0 rounded-full"></div>
+            </div>
+            <div class="skeleton h-4 w-28"></div>
+            <div class="skeleton h-4 w-28"></div>
+            <div class="skeleton h-4 w-full"></div>
+            <div class="skeleton h-4 w-full"></div>
+            <div class="skeleton h-4 w-full"></div>
+            <div class="card-actions justify-end">
+              <div class="skeleton h-[32px] w-[84px]"></div>
+            </div>
+          </div>
+        </div>
       <% end %>
     </div>
-    <%= render "shared/load_more_button" %>
   <% end %>
 </div>
