--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,3 +1,10 @@
+<%- if devise_mapping.omniauthable? %>
+  <%- resource_class.omniauth_providers.each do |provider| %>
+    <%= button_to user_twitter2_omniauth_authorize_path, data: { turbo: false }, class: "btn btn-neutral mb-6 w-full mx-auto mt-2" do %>
+      <i class="fa-brands fa-x-twitter text-[24px]"></i></i><span class="text-[20px]">でログインする
+    <% end %><br />
+  <% end %>
+<% end %>
 <%- if controller_name != 'sessions' %>
   <%= link_to t('devise.shared.links.sign_in'), new_session_path(resource_name), class: "link text-[#3F51B5]" %><br />
 <% end %>
@@ -16,10 +23,4 @@
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: "link text-[#3F51B5]" %><br />
-<% end %>
-
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false } %><br />
-  <% end %>
 <% end %>
